BULK Commit. Audio add. Layout add. Sidebar add.

--- a/src/components/product/style.module.css
+++ b/src/components/product/style.module.css
@@ -27,6 +27,10 @@
     color: var(--primary-color);
   }
 
+  &:hover [data-field="image"] {
+    transform: scale(1.2);
+  }
+
   & [data-field="image"] {
     display: flex;
     align-items: center;
