--- a/src/components/sidebar/style.module.css
+++ b/src/components/sidebar/style.module.css
@@ -1,21 +1,35 @@
 .sidebar {
   position: fixed;
+  top: 0;
   bottom: 0;
   background-color: #fff;
-  right: 0;
+  right: -30%;
   width: 30%;
   max-width: 100vw;
-  height: 30%;
-  max-height: 100dvh;
+
+  box-shadow: 20px 0px 20px 12px black;
 
   z-index: var(--zIndex-sidebar);
 
+  box-sizing: border-box;
+
   overflow: auto;
-  padding: 8px;
+  padding: 24px;
+
+  animation-name: enter-sidebar;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes enter-sidebar {
+  to {
+    right: 0;
+  }
 }
 
 .title {
   color: var(--primary-color);
+  font-size: 2rem;
 }
 
 .products {
