nes.css add (pixel art). code refactor. categories add

--- a/src/components/molecules/product-list/style.module.css
+++ b/src/components/molecules/product-list/style.module.css
@@ -8,5 +8,15 @@
 .product {
   cursor: pointer;
   height: 150px;
+  width: 100%;
   box-sizing: border-box;
+  background: transparent;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+
+  &:not(:focus-visible) {
+    outline: none;
+  }
 }
