--- a/src/components/atoms/product/style.module.css
+++ b/src/components/atoms/product/style.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 24px;
+  padding: 2em;
   border-radius: var(--border-radius);
   font-weight: 500;
 
@@ -37,16 +37,16 @@
     justify-content: center;
     margin-bottom: 1rem;
     position: relative;
-    height: 75%;
 
     img {
-      height: 100%;
+      display: block;
+      width: 100%;
     }
   }
 
   & [data-field="name"] {
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1em;
     text-align: center;
   }
 }
