--- a/src/components/molecules/product-list/list/style.module.css
+++ b/src/components/molecules/product-list/list/style.module.css
@@ -1,10 +1,24 @@
 .sidebar {
   position: fixed;
-  bottom: 24px;
   background-color: #fff;
-  right: -30%;
-  width: 30%;
-  max-width: 100vw;
+  
+  bottom: -100%;
+  left: 10px;
+  width: calc(100% - 20px);
+  right: 10px;
+
+  max-height: 40vh;
+
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+  animation-name: enter-sidebar-mobile;
+  @media screen and (min-width: var(--screen-s)) {
+    bottom: 24px;
+    right: -30%;
+    width: 30%;
+    max-width: 100vw;
+    animation-name: enter-sidebar;
+  }
 
   display: flex;
   flex-direction: column;
@@ -19,11 +33,14 @@
 
   overflow: auto;
   padding: 24px;
-
-  animation-name: enter-sidebar;
-  animation-duration: 0.3s;
-  animation-fill-mode: forwards;
 }
+
+@keyframes enter-sidebar-mobile {
+  to {
+    bottom: 10px;
+  }
+}
+
 
 @keyframes enter-sidebar {
   to {
@@ -39,6 +56,8 @@
 .products {
   display: flex;
   flex-wrap: wrap;
+
+  font-size: 12px;
 }
 
 .product {
