--- a/src/components/atoms/product/style.module.css
+++ b/src/components/atoms/product/style.module.css
@@ -38,9 +38,12 @@
     margin-bottom: 1rem;
     position: relative;
 
+
     img {
       display: block;
       width: 100%;
+    max-height: 50px;
+
     }
   }
 
