--- a/src/components/molecules/product-list/style.module.css
+++ b/src/components/molecules/product-list/style.module.css
@@ -26,6 +26,19 @@
 }
 
 
-.totalProductCount {
-  
+.category {
+  position: sticky;
+  top: 0;
+
+  background-color: var(--background-color);
+  z-index: var(--zIndex-productList-category);
+font-size: 1.5rem;
+color: var(--primary-color);
+}
+
+.productsAndCategory:not(:last-child) {
+  padding-bottom: 12px;
+  margin-bottom: 12px;
+  border-bottom: 1px solid black;
+  border-style:dashed;
 }
