--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@ samp {
 
   --border-color: #f9f9f9;
 
+  --background-color: #f4f4f4;
+
   --border-radius: 4px;
 
   /* Color Theme Swatches in Hex */
@@ -36,7 +38,8 @@ samp {
   line-height: 1.5;
   font-weight: 400;
 
-  --zIndex-sidebar: 1;
+  --zIndex-sidebar: 2;
+  --zIndex-productList-category: 1;
 
   --sidebar-width: 30%;
   --layout-padding: 24px;
@@ -62,6 +65,8 @@ body {
   color-scheme: light dark;
   color: var(--primary-color);
 
+  background-color: var(--background-color);
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -77,10 +82,6 @@ body {
 
 h1 {
   font-size: 2rem;
-}
-
-.background {
-  background-color: #f4f4f4;
 }
 
 @media (prefers-color-scheme: light) {
