--- a/src/components/atoms/product/style.module.css
+++ b/src/components/atoms/product/style.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 2em;
+  padding: 1em 0;
   border-radius: var(--border-radius);
   font-weight: 500;
 
@@ -38,12 +38,10 @@
     margin-bottom: 1rem;
     position: relative;
 
-
     img {
       display: block;
       width: 100%;
-    max-height: 50px;
-
+      max-height: 50px;
     }
   }
 
