--- a/src/components/atoms/input/style.module.css
+++ b/src/components/atoms/input/style.module.css
@@ -1,4 +1,21 @@
 .input {
   padding: 12px;
-  border: 1px solid;
+  border: 1px solid var(--primary-color);
+  background-color: var(--background-color);
+
+  width: 100%;
+
+  outline: 0;
+}
+
+.inputWrapper {
+  position: relative;
+}
+
+.prefix {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+
+  right: 8px;
 }
