--- a/src/components/atoms/product/style.module.css
+++ b/src/components/atoms/product/style.module.css
@@ -1,4 +1,5 @@
 .product {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,14 +10,11 @@
 
   box-sizing: border-box;
   background-color: white;
-  box-shadow: inset 0px 0px 22px -15px #000000;
 
   height: 100%;
   width: 100%;
 
   /* transition: box-shadow 0.1s ease-in; */
-
-  border: 3px solid transparent;
 
   &:hover {
     border-color: var(--primary-color);
@@ -32,6 +30,11 @@
   }
 
   & [data-field="image"] {
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    width: 100%;
+    height: 100px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,7 +43,8 @@
 
     img {
       display: block;
-      width: 100%;
+      width: 50%;
+      height: 100%;
       max-height: 50px;
     }
   }
@@ -50,4 +54,21 @@
     font-size: 1em;
     text-align: center;
   }
+}
+
+.addBasketButton {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  color: var(--border-color);
 }
